# pipeliner

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: benchmark_test.cpp
dependencies/: timer.h
example/: main.cpp
include/pipeliner/: basic_block.h  computation_block.h  debug.h  filter_block.h  generator_block.h  labelling_block.h  processor.h  union_find.h
source/: basic_block.cpp  filter_block.cpp  generator_block.cpp  labelling_block.cpp
test/: basic_block_test.cpp  computation_block_test.cpp  filter_block_test.cpp  generator_and_filter_test.cpp  generator_block_test.cpp  labelling_block_test.cpp
test/data/: MOCK_DATA_16_100.csv  MOCK_DATA_16_1000.csv
